trying out a songza version that doesn't require authentication.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
-<html lang="en" ng-app="ImageSound">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Sound Image</title>
-
 </head>
-
-<body ng-controller="MainController">
-
-
-<script src="node_modules/angular/angular-min.js"></script>
-<script src="node_modules/angular-spotify/dist/angular-spotify.min.js"></script>
-<script src="script.js"></script>
-
+<body>
+  <script src="bundle.js"></script>
 </body>
 </html>
