--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 
   <input type="text" ng-model="searchTag" ng-change="searchSpotifyTag(searchTag)" placeholder="Search for tracks">
 
+  <button ng-click="getBackground()">Get Background</button>
+
   <ul>
     <li ng-repeat="url in trackUrls">
       <iframe ng-src={{url}} width="250" height="80" frameborder="0" allowtransparency="true"></iframe>
     </li>
   </ul>
 
+  <script src="500px.js"></script>
   <script src="node_modules/angular/angular.js"></script>
   <script src="script.js"></script>
 
