--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <head>
   <meta charset="utf-8">
   <title>Sound Image</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body ng-controller="MainController">
 
-  <input type="text" ng-model="searchTag" ng-change="searchSpotifyTag(searchTag)" placeholder="Search for tracks">
-
-  <button ng-click="getBackground()">Get Background</button>
-
+  <div id="searchBar">
+    <input type="text" ng-model="searchTag" placeholder="Search for tracks">
+    <button ng-click="getBackground(searchTag)">Go!</button>
+  </div>
+  
   <ul>
     <li ng-repeat="url in trackUrls">
       <iframe ng-src={{url}} width="250" height="80" frameborder="0" allowtransparency="true"></iframe>
